[tool.poetry]
name = "numba-tutorial"
version = "0.1.0"
description = ""
authors = ["Edoardo D'Amico <damicoedoardo95@gmail.com>"]
readme = "README.md"
packages = [{include = "numba_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
numba = "^0.56.4"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.12.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
